[package]
name = "new-ats-repos"
version = "0.1.0"
authors = ["Timmy Jose <zoltan.jose@gmail.com>"]
edition = "2018"

[dependencies]

chrono = "0.4.12"
egg-mode = "0.15"
env_logger = "0.7.1"
futures = "0.3.5"
log = "0.4.8"
reqwest = { version = "0.10.6", features = ["blocking"]}
serde = "1.0.114"
serde_json = "1.0"
tokio = { version = "0.2.21", features = ["time", "rt-core", "macros"] }
